--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,32 @@
-
-name: expense_tracker_plus
-description: A full-featured expense tracker with Firebase sync, charts, animations, ads and premium unlock.
+name: expense_tracker
+description: A Flutter expense tracker app.
 version: 1.0.0+1
+publish_to: "none"
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  provider: ^6.0.5
-  firebase_core: ^2.8.0
-  cloud_firestore: ^4.7.0
-  firebase_auth: ^4.4.0
-  shared_preferences: ^2.1.1
-  fl_chart: ^0.55.0
-  google_mobile_ads: ^2.3.0
-  intl: ^0.18.0
-  uuid: ^3.0.7
-  in_app_purchase: ^3.2.3
-  animated_list_plus: ^0.5.0
 
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/
+  # Firebase (latest major versions)
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+
+  # Ads
+  google_mobile_ads: ^6.0.0
+
+  # Charts
+  fl_chart: ^1.0.0
+
+  # State management
+  provider: ^6.1.2
+
+  # Utils
+  intl: ^0.20.2
+  uuid: ^4.5.1
+  shared_preferences: ^2.5.3   
+  # WebView (optional, if you plan to use it)
+  webview_flutter: ^4.13.0
